maze.lessons.maze.island.IslandMaze.scala.error
Escaper:21: error: not found: value DirectionNORTH
	case 0 => if(getDirection==DirectionNORTH){
                                   ^Escaper:25: error: not found: value DirectionNORTH
	case 1 => if(getDirection==DirectionNORTH && estFaceMur==false){
                                   ^